pacman test files added

--- a/pacman.html
+++ b/pacman.html
@@ -20,10 +20,12 @@
     <div class="commandGuide">
       
       <div>
+        <label for="">START:</label>
         <input type="text" id="placePacMan" placeholder="PLACE X,Y,F">
         <button id="place"> 🔵 PLACE</button>
       </div>
         <div>
+          <label for="">END:</label>
           <span type="text" id="currentLocation" >
           <button id="report"> 🔴 REPORT</button>
         </div>
@@ -39,31 +41,31 @@
 
 
     <section class="board"> 
-        <div id="b0" class="box">0,4</div>
-        <div id="b1" class="box">1,4</div>
-        <div id="b2" class="box">2,4</div>
-        <div id="b3" class="box">3,4</div>
-        <div id="b4" class="box">4,4</div>
-        <div id="b5" class="box">0,3</div>
-        <div id="b6" class="box">1,3</div>
-        <div id="b7" class="box">2,3</div>
-        <div id="b8" class="box">3,3</div>
-        <div id="b9" class="box">4,3</div>
-        <div id="b10" class="box">0,2</div>
-        <div id="b11" class="box">1,2</div>
-        <div id="b12" class="box">2,2</div>
-        <div id="b13" class="box">3,2</div>
-        <div id="b14" class="box">4,2</div>
-        <div id="b15" class="box">0,1</div>
-        <div id="b16" class="box">1,1</div>
-        <div id="b17" class="box">2,1</div>
-        <div id="b18" class="box">3,1</div>
-        <div id="b19" class="box">4,1</div>
-        <div id="b20" class="box">0,0</div>
-        <div id="b21" class="box">1,0</div>
-        <div id="b22" class="box">2,0 </div>
-        <div id="b23" class="box">3,0</div>
-        <div id="b24" class="box">4,0</div>
+        <div id="x0y4" class="box">0,4</div>
+        <div id="x1y4" class="box">1,4</div>
+        <div id="x2y4" class="box">2,4</div>
+        <div id="x3y4" class="box">3,4</div>
+        <div id="x4y4" class="box">4,4</div>
+        <div id="x0y3" class="box">0,3</div>
+        <div id="x1y3" class="box">1,3</div>
+        <div id="x2y3" class="box">2,3</div>
+        <div id="x3y3" class="box">3,3</div>
+        <div id="x4y3" class="box">4,3</div>
+        <div id="x0y2" class="box">0,2</div>
+        <div id="x1y2" class="box">1,2</div>
+        <div id="x2y2" class="box">2,2</div>
+        <div id="x3y2" class="box">3,2</div>
+        <div id="x4y2" class="box">4,2</div>
+        <div id="x0y1" class="box">0,1</div>
+        <div id="x1y1" class="box">1,1</div>
+        <div id="x2y1" class="box">2,1</div>
+        <div id="x3y1" class="box">3,1</div>
+        <div id="x4y1" class="box">4,1</div>
+        <div id="x0y0" class="box">0,0</div>
+        <div id="x1y0" class="box">1,0</div>
+        <div id="x2y0" class="box">2,0 </div>
+        <div id="x3y0" class="box">3,0</div>
+        <div id="x4y0" class="box">4,0</div>
         </div>
     </section>
 
