pacman.js code completed

--- a/pacman.html
+++ b/pacman.html
@@ -9,8 +9,12 @@
    
 </head>
 <body>
+  <div> <p>Don't click genie!</p>
+    <button id="background">🧞‍♀️</button>
+  </div>
 
     <h1>Pacman Simulator</h1>
+   
     <h2>User Guide:-</h2>
     <p>command guide for user X & Y are cordinates and F (NORTH, EAST, SOUTH, WEST)
       Report will show you PAC-Man's current location.
@@ -26,17 +30,18 @@
       </div>
         <div>
           <label for="">END:</label>
-          <span type="text" id="currentLocation" >
+          
           <button id="report"> 🔴 REPORT</button>
         </div>
+        <div><span type="text" id="currentLocation" ></span></div>
        
+       <button id="rotateRight"> 🚶🏻↩️ RIGHT</button>
     </div>
 
     <div class="buttons">
         <button id="move"> 🕺🏻❖ MOVE</button>
         <button id="rotateLeft"> 🚶🏻↪️ LEFT</button>
-        <button id="rotateRight"> 🚶🏻↩️ RIGHT</button>
-
+ 
     </div>
 
 
