font style changes and responsive design

--- a/index.html
+++ b/index.html
@@ -7,17 +7,19 @@
     <title>Document</title>
     <link rel="stylesheet" href="./pacman.css">
     <script src="https://kit.fontawesome.com/127b9bf8e5.js" crossorigin="anonymous"></script>
-   
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Macondo&display=swap" rel="stylesheet">
 </head>
+
 <body>
   <div> <p>Don't click genie!</p>
     <button class='glowing-btn'  id="background">🧞‍♀️</button>
   </div>
 
     <h1>Pacman Simulator</h1>
-   
-    <h2>User Guide:-</h2>
-    <p>command guide - select a starting point from drop-down list.
+    <p>command guide - select a starting point from drop-down list and click to place pacman.
+      move pacman and rotate Left and Right to turn directions.
       END will show current location
     </p>
 
@@ -52,13 +54,13 @@
         <div id="x0y4" class="box">👻</div>
         <div id="x1y4" class="box"></div>
         <div id="x2y4" class="box"></div>
-        <div id="x3y4" class="box"></div>
+        <div id="x3y4" class="box">👻</div>
         <div id="x4y4" class="box"></div>
         <div id="x0y3" class="box"></div>
         <div id="x1y3" class="box"></div>
-        <div id="x2y3" class="box"></div>
+        <div id="x2y3" class="box">👻</div>
         <div id="x3y3" class="box"></div>
-        <div id="x4y3" class="box"></div>
+        <div id="x4y3" class="box">👻</div>
         <div id="x0y2" class="box"></div>
         <div id="x1y2" class="box"></div>
         <div id="x2y2" class="box"></div>
@@ -68,7 +70,7 @@
         <div id="x1y1" class="box"></div>
         <div id="x2y1" class="box"></div>
         <div id="x3y1" class="box"></div>
-        <div id="x4y1" class="box"></div>
+        <div id="x4y1" class="box">👻</div>
         <div id="x0y0" class="box"></div>
         <div id="x1y0" class="box"></div>
         <div id="x2y0" class="box"></div>
