--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <div> <p>Don't click genie!</p>
-    <button class='glowing-btn'  id="background">🧞‍♀️</button>
+    <button class="glowing-btn"  id="background">🧞‍♀️</button>
   </div>
 
     <h1>Pacman Simulator</h1>
